--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
             and <strong>conformal prediction</strong>.
             </p>
 
-            <p>
-            I previously interned at <strong>Airbus AI Research</strong> in Toulouse,
-            where I worked on computer vision, uncertainty quantification and data engineering tasks bridging AI theory and real-world deployment. I also interned at
+          <p>
+            I previously interned at <strong>Airbus AI Research</strong> in Toulouse, 
+            in collaboration with <a href="https://aniti.univ-toulouse.fr/en/" target="_blank"><strong>ANITI</strong> (Artificial and Natural Intelligence Toulouse Institute)</a>. 
+            During this experience, I worked on computer vision, uncertainty quantification, and data engineering tasks, bridging AI theory and real-world deployment.
+            I also interned at
             <strong>PwC</strong> in the Data & Analytics division.</p>
 
             <p>
@@ -86,9 +88,10 @@
 
               <li>
                 <span class="date">September 2025</span>
-                <p>Paper <em>LARD 2.0: Enhanced Dataset and Benchmarking for Autonomous Landing Systems</em> accepted and presented at <strong>DASC 2025</strong>.</p>
+                <p>Released early access on the Dataset <em>LARD V2.0</em>presented at <strong>DASC 2025</strong>.</p>
                 <p class="links">
                   [<a href="https://huggingface.co/datasets/DEEL-AI/LARD_V2" target="_blank">code</a>] 
+                  [<a href="assets/doc/slides/DASC2025_LARDv2.pdf" target="_blank">slides</a>]
                 </p>
               </li>
 
