Update research interests and job search focus

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             <strong>PwC</strong> in the Data & Analytics division.</p>
 
             <p>
-            My research interests revolve around <strong>vision-language models</strong>, <strong>computer vision</strong>, 
+            My interests revolve around <strong>vision-language models</strong>, <strong>computer vision</strong>, 
             and <strong>fairness / robustness</strong> in AI systems, with particular interest in <em>pose estimation</em>, 
             <em>active learning</em>, and <em>causal reasoning</em> for <strong>autonomous and medical applications</strong>.
             </p>
 
             <p>
-            I am currently seeking <strong>PhD or research assistant opportunities</strong> in these areas, 
+            I am currently seeking <strong>AI roles</strong> (ML Engineer, Data Scientist, AI Engineer etc.), 
             where I can advance reliable, transparent, and efficient perception systems.
             </p>
 
